sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: type mismatch;
 found   : Boolean
 required: Int
   while(j>0 && getValeur(j-1>v)){
                             ^